objects/Email_To_Case_Queues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to store the Queue Names corresponding to Email to Case routing addresses</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field is used to store the Routing Address for Email to Case</description>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>This field is used to store the Queue Name corresponding to Routing Address of Email to Case</description>
        <label>Queue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Email To Case Queues</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SETUP_TYPE</columns>
        <columns>State__c</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Email__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>